Remove Minecraft from classpath of the pre-launch source set
This will help to avoid class-load issues and makes the code more
hygienic.